--- a/Vvv/Web/Principal.Master
+++ b/Vvv/Web/Principal.Master
@@ -17,7 +17,8 @@
 	<div id="header" class="container">
 		<div id="logo">
 			<span class="icon icon-group"></span>
-			<h1><a href="Default.aspx">Plushiness</a></h1>
+			<h1><a href="Default.aspx">VVV</a></h1>
+            <span> <a href="#" rel="nofollow">Venta Virtual De Vehículos</a></span>
 			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a></span>
 		</div>
 		<div id="triangle-up"></div>
@@ -31,7 +32,7 @@
 				<li><a href="Support.aspx" accesskey="3" title="">Support</a></li>
 				<li><a href="Cart.aspx" accesskey="4" title="">Cart</a></li>
                 <li><a href="Factura1.aspx" accesskey="5" title="">Factura</a></li>
-				<li><a href="Profile.aspx" accesskey="6" title="">Admin</a></li>
+				<li><a href="Profile.aspx" accesskey="6" title="">Sesion Admin</a></li>
                 
 			</ul>
 		</div>
@@ -45,6 +46,16 @@
         </asp:ContentPlaceHolder> 
 <div id="copyright" class="container">
 	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+
+    <div id="contact">
+        <p>Caso de estudio tomado de <a href="#">Edwin Alexander Puertas del Castillo</a><br />
+           || Todos los derechos reservados  FARAJ S.A 2015||<br />
+            <a href="https://www.facebook.com/jair.diaz.77">JAIR DIAZ ZAMBRANO</a><br />
+            <a href="https://www.facebook.com/Francisco.Antonio.Cabezas.Vega">FRANCISCO CABEZAS VEGA</a><br />
+            <a href="https://www.facebook.com/rafael.r.barrios">RAFAEL ROCHA BARRIOS</a>
+        </p>
+    </div>
+
 </div>
 
        
